# spz-rs

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: spz.yml
spz/: Cargo.toml
spz-lib/: Cargo.toml
spz-lib/src/: common.rs  error.rs  lib.rs  structures.rs
spz-lib/tests/decompressed/: gaussian_splat.ply
spz-lib/tests/original/: gaussian_splat.ply
spz/src/: main.rs
