[package]
name = "spz-lib"
version = "0.1.0"
edition = "2021"
authors = ["Denis Avvakumov"]
description = "A Rust library for compressing PLY files."
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["compression", "graphics", "3d"]
keywords = ["PLY", "compression"]

[dependencies]
cfg-if = "1.0.0"
foldhash = "0.1.4"
half = "2.4.1"
memchr = "2.7.4"
zstd = { version = "0.13.3", features = ["zstdmt"] }
zerocopy = { version = "0.8.22", features = ["derive"]}
tokio = { version = "1.43", features = ["io-util"], optional = true }
async-compression = { version = "0.4.18", features = ["zstdmt", "tokio"], optional = true }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"]}

[features]
default = []
async = ["tokio", "async-compression"]
