[package]
name = "spz-lib"
version = "0.1.0"
edition = "2021"
authors = ["Denis Avvakumov"]
description = "A Rust library for compressing PLY files."
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["compression", "graphics", "3d"]
keywords = ["PLY", "compression"]

[dependencies]
cfg-if = "1.0.1"
foldhash = "0.1.5"
half = "2.6.0"
memchr = "2.7.5"
zstd = { version = "0.13.3", features = ["zstdmt"] }
zerocopy = { version = "0.8.26", features = ["derive"]}
tokio = { workspace = true, features = ["io-util"], optional = true }
async-compression = { version = "0.4.27", features = ["zstdmt", "tokio"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[features]
default = []
async = ["tokio", "async-compression"]
